bk_ida/gobmkida/c1/aftermath_genmove
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/aftermath_genmove/src/engine/aftermath.c:979:40: error: use of undeclared identifier 'byte_9AA88C'
if ( ( _DWORD)v39 == ( unsigned __int8)byte_9AA88C[v37] ) 
                                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/aftermath_genmove/src/engine/aftermath.c:989:4: error: use of undeclared identifier 'byte_9AA88D'
|| byte_9AA88D[v37] != 3 && !v148[v37 + 21]) ) 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/aftermath_genmove/src/engine/aftermath.c:1322:28: error: use of undeclared identifier 'invalid_operation'
if ( !( ( v97 + v96 < 0) ^ __OFADD__( v97, v96) | ( v97 + v96 == 0)) ) 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/aftermath_genmove/src/engine/aftermath.c:370:25: note: expanded from macro '__OFADD__'
#define __OFADD__(x, y) invalid_operation // Generate overflow flag for (x+y)
                        ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/aftermath_genmove/src/engine/aftermath.c:1610:18: error: use of undeclared identifier 'dword_9DF084'
safety = dragon2[dword_9DF084[v143 / 4]].safety; 
                 ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/aftermath_genmove/src/obj/1/aftermath.o] Error 1
